--- a/Main.html
+++ b/Main.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>My Webpage</title>
@@ -133,6 +133,7 @@ body{
           <span>
             <h3>coderider</h3>
             <p>Download free source code on github.</p>
+            
           </span>
         </a></li>
     </ul>
