--- a/Main.html
+++ b/Main.html
@@ -5,7 +5,7 @@
 	<!--<link rel="stylesheet" type="text/css" href="Main.css"> 
   -->
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap');
+     /*@import url('https://4kwallpapers.com/images/walls/thumbs_3t/4944.png');*/
 *{
     padding: 0;
     margin: 0;
@@ -15,11 +15,13 @@
 a{
     text-decoration: none;
 }
+
 body{
     height: 100vh;
     display: grid;
     place-items: center;
-    background: #000000;
+    /*background: #000000; */
+    /*background-image: "/img/itachi_background.png";*/
     font-family: 'Nunito', sans-serif;
 }
 .container{
@@ -71,16 +73,16 @@ body{
 .social__links ul li a span{
     line-height: 1.4rem;
 }
-.social__links ul .instagram:hover{
-    background: #fd5949;
-}
-.social__links ul .youtube:hover{
-    background:#FF0000;
-}
 .social__links ul .telegram:hover{
-    background:#0088cc;
+    background: #0088cc;
 }
-.social__links ul .github:hover{
+.social__links ul .whatsapp:hover{
+    background:#339933;
+}
+.social__links ul .instagram:hover{
+    background:#ff4d6a;
+}
+.social__links ul .portfolio:hover{
     background: #333;
 } 
 @media only screen and (max-width: 549px) {
@@ -98,41 +100,44 @@ body{
 });
   </script>
 </head>
-<body>
+<body background="/img/itachi_background.png">
 	<div class="container">
   <div class="head__section">
-    <img src="https://scontent.fsin14-2.fna.fbcdn.net/v/t39.30808-6/304741145_10160188233517140_1486069961268337847_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=B2bgTEWo7skAX9a4H5r&_nc_ht=scontent.fsin14-2.fna&oh=00_AfA1Vz0ufkVeks5JTOdgwaVgSfmKqir805-oNr0YC31Onw&oe=64A82A61" alt="">
+    <img src="https://scontent.fsin14-2.fna.fbcdn.net/v/t39.30808-6/304741145_10160188233517140_1486069961268337847_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=-k_uNQQYdd8AX8Wj3iL&_nc_ht=scontent.fsin14-2.fna&oh=00_AfCj5G6xmy87LF11vKuNMwiBdUuHtusi8802K-YmXFA4Dg&oe=64AE1921" alt="">
     <p></p>
+    <br>
+    <p>Yong Yue Min Ryan</p>
+    <br>
     <p>I'm a full stack web developer</p>
   </div>
   <div class="social__links">
     <ul id="item">
-      <li class="instagram"><a href="#">
-          <i class="fa fa-instagram"></i>
-          <span>
-            <h3>@coderider</h3>
-            <p>Follow me for more interesting web development projects.</p>
-          </span>
-        </a></li>
-      <li class="youtube"><a href="#">
-          <i class="fa fa-youtube"></i>
-          <span>
-            <h3>coderider</h3>
-            <p>Like share and subscribe to our channel.</p>
-          </span>
-        </a></li>
-      <li class="telegram"><a href="#">
+      <li class="telegram"><a href=" https://t.me/Ryantelesss">
           <i class="fa fa-telegram"></i>
           <span>
-            <h3>coderider</h3>
-            <p>Download free source code on telegram.</p>
+            <h3>Telegram</h3>
+            <p>Connect with me throught telegram!</p>
           </span>
         </a></li>
-      <li class="github"><a href="#">
-          <i class="fa fa-github"></i>
+      <li class="whatsapp"><a href="https://wa.me/93238401">
+          <i class="fa fa-whatsapp"></i>
           <span>
-            <h3>coderider</h3>
-            <p>Download free source code on github.</p>
+            <h3>Whatsapp</h3>
+            <p>Click on this BUTTON to reach me through Whatsapp!</p>
+          </span>
+        </a></li>
+      <li class="instagram"><a href="https://instagram.com/ryanpicturesss?igshid=YmMyMTA2M2Y=">
+          <i class="fa fa-instagram"></i>
+          <span>
+            <h3>Instagram</h3>
+            <p>See what I am up too through Instagram</p>
+          </span>
+        </a></li>
+      <li class="portfolio"><a href="#">
+          <i class="fa fa-portfolio"></i>
+          <span>
+            <h3>Portfolio</h3>
+            <p>Check out what I've made, I do FREELANCING</p>
             
           </span>
         </a></li>
