--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ body{
 });
   </script>
 </head>
-<body background="/img/itachi_background.png">
+<body background="LinkTree/img/itachi_background.png">
 	<div class="container">
   <div class="head__section">
     <img src="https://scontent.fsin14-2.fna.fbcdn.net/v/t39.30808-6/304741145_10160188233517140_1486069961268337847_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=-k_uNQQYdd8AX8Wj3iL&_nc_ht=scontent.fsin14-2.fna&oh=00_AfCj5G6xmy87LF11vKuNMwiBdUuHtusi8802K-YmXFA4Dg&oe=64AE1921" alt="">
