--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@ body{
             <p>See what I am up too through Instagram</p>
           </span>
         </a></li>
-      <li class="portfolio"><a href="img/Resume 2023.pdf">
+      <!--<li class="portfolio"><a href="img/Resume 2023.pdf">-->
+      <li class="portfolio"><a href="test.html"></a>
           <i class="fa fa-portfolio"></i>
           <span>
             <h3>Resume</h3>
